--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -42,26 +42,21 @@
             <b>댓글리스트</b>
         </div>
         <div class="list-group">
+            {{#board.replies}}
             <!-- 댓글아이템 -->
             <div class="list-group-item d-flex justify-content-between align-items-center">
                 <div class="d-flex">
-                    <div class="px-1 me-1 bg-primary text-white rounded">cos</div>
-                    <div>댓글 내용입니다</div>
+                    <div class="px-1 me-1 bg-primary text-white rounded">{{user.username}}</div>
+                    <div>{{comment}}</div>
                 </div>
-                <form action="/reply/1/delete" method="post">
+                {{#replyOwner}}
+                <!-- form 태그이기 때문에 get,post 만 존재 -->
+                <form action="/board/{{board.id}}/reply/{{id}}/delete" method="post">
                     <button class="btn">🗑</button>
                 </form>
+                {{/replyOwner}}
             </div>
-            <!-- 댓글아이템 -->
-            <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="d-flex">
-                    <div class="px-1 me-1 bg-primary text-white rounded">ssar</div>
-                    <div>댓글 내용입니다</div>
-                </div>
-                <form action="/reply/1/delete" method="post">
-                    <button class="btn">🗑</button>
-                </form>
-            </div>
+            {{/board.replies}}
         </div>
     </div>
 </div>
